--- a/intearctive-mode-template/pages/cw_template1.html
+++ b/intearctive-mode-template/pages/cw_template1.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../css/custom/global_custom.css" />
   <link rel="stylesheet" href="../css/custom/template1.css" />
   <link rel="stylesheet" href="../css/custom/cw_header.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 
 <body style="width: 1080px; height: 1920px;">
