--- a/intearctive-mode-template/pages/cw_template2.html
+++ b/intearctive-mode-template/pages/cw_template2.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/custom/template2.css" />
     <link rel="stylesheet" href="../css/custom/content_template2.css" />
     <link rel="stylesheet" href="../css/custom/cw_header.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 
 <body style="width: 1080px; height: 1920px;">
