--- a/intearctive-mode-template/pages/home_select_product_list.html
+++ b/intearctive-mode-template/pages/home_select_product_list.html
@@ -139,6 +139,7 @@
             var time = today.getHours().toString().padStart(2, '0') + ":" + today.getMinutes().toString().padStart(2, '0');
             if ((time >= "11:15" && time < "12:00") || (time >= "14:15" && time < "15:00") || (time >= "18:00" && time < "18:45")) {
                 if ($('#header').find($('#flash-header')).length == 0) {
+                    $('#header').css("height", "200px")
                     $('#header').append(`
                 <div id="flash-header" style="position: absolute; width: 100%; height: 220px; background-color:black;">
                     <video width="100%" height="100%" autoplay muted loop>
@@ -151,6 +152,7 @@
                 }
             } else {
                 $('#flash-header').remove()
+                $('#header').css("height", "220px")
                 $('#girl-header').css('height', 'auto')
                 $('#girl-header').css('max-width', '100%')
             }
