Change background image path to relative

--- a/intearctive-mode-template/pages/roof_product_details.html
+++ b/intearctive-mode-template/pages/roof_product_details.html
@@ -26,7 +26,7 @@
 
     <!-- Main Content -->
     <main class="main-content w-100 mt-0 interactive-mode2"
-        style="height: 1700px; background: url(/intearctive-mode-template/images/bg-main.png);">
+        style="height: 1700px; background: url(../images/bg-main.png);">
         <!-- Quote -->
         <div class="quote-section  strip1">
             <p><em>“</em> <span
