--- a/intearctive-mode-template/pages/roof_product_list.html
+++ b/intearctive-mode-template/pages/roof_product_list.html
@@ -25,7 +25,7 @@
 
     <!-- Main Content -->
     <main class="main-content w-100 mt-0 interactive-mode2"
-        style="background: url(/intearctive-mode-template/images/bg-main.png)">
+        style="background: url(../images/bg-main.png)">
         <!-- Quote -->
         <div class="quote-section  strip1" style="background: transparent;">
             <p><em>“</em>
@@ -47,7 +47,7 @@
 
                     <ul class="nav nav-pills mb-3 " id="nav-tabs" role="tablist">
                         <!-- ใส่ button nav จ่าก js/jquery -->
-                    </ul>                
+                    </ul>
                 </div>
 
 
