--- a/intearctive-mode-template/pages/roof_template2.html
+++ b/intearctive-mode-template/pages/roof_template2.html
@@ -26,7 +26,7 @@
 
     <!-- Main Content -->
     <main class="main-content w-100 mt-0 interactive-mode2"
-        style="background: url(/intearctive-mode-template/images/bg-main.png)">
+        style="background: url(../images/bg-main.png)">
         <!-- Quote -->
         <div class="quote-section  strip1" style="background: transparent;">
             <p><em>“</em>
