add time duration produict detail and product list

--- a/intearctive-mode-template/pages/cw_product_list.html
+++ b/intearctive-mode-template/pages/cw_product_list.html
@@ -107,8 +107,23 @@
 
 <script>
     $(document).ready(function () {
+        var startTime = performance.now()
+        var endTime = performance.now()
+        var interact_time_stmp = (startTime-endTime)/1000 // seconds
+        interval_id = setInterval(function(){
+            interact_time_stmp = (performance.now() - startTime)/1000
+            console.log("interact time stamp " + interact_time_stmp)
+            if (interact_time_stmp > 15){
+                window.location.href = 'cw_template1.html'
+            }
+        }, 1000)
+
+        $("html").click(function( event ) {     
+            startTime = performance.now()
+        });
 
         $('.main-content .quote-section').append('<style>.unset_content:before{content:unset;}</style>');
+        var startTime = performance.now()        
 
         $.getJSON('../configs.json', function (jd) {
             let count = 0;
