--- a/intearctive-mode-template/pages/roof_product_details.html
+++ b/intearctive-mode-template/pages/roof_product_details.html
@@ -138,6 +138,18 @@
 </body>
 <script>
     $(document).ready(function () {
+        // check user interactive
+        var startTime = performance.now()
+        var endTime = performance.now()
+        var interact_time_stmp = (startTime-endTime)/1000 // seconds
+        interval_id = setInterval(function(){
+            interact_time_stmp = (performance.now() - startTime)/1000
+            console.log("interact time stamp " + interact_time_stmp)
+            if (interact_time_stmp > 15){
+                window.location.href = 'roof_template1.html'
+            }
+        }, 1000)
+
         $.getJSON('../configs.json', function (jd) {
 
             var product_id = localStorage.getItem('id')
