--- a/intearctive-mode-template/pages/cw_template1.html
+++ b/intearctive-mode-template/pages/cw_template1.html
@@ -30,7 +30,8 @@
     </div>
     <div class="template1-content-panel position-relative ">
       <div id="home-select-video-panel" class="template1-video-panel">
-        <video width="100%" height="100%" autoplay muted>
+        <iframe src="https://olafwempe.com/mp3/silence/silence.mp3" type="audio/mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+        <video width="100%" height="100%" autoplay muted loop playsinline preload="metadata">
           <source src="" type="video/mp4">
           <!-- <source src="movie.ogg" type="video/ogg"> -->
           Your browser does not support the video tag.
@@ -82,7 +83,7 @@
     setInterval(function () {
       var today = new Date();
       var time = today.getHours().toString().padStart(2, '0') + ":" + today.getMinutes().toString().padStart(2, '0');
-      if ((time >= "10:15" && time < "12:00") || (time >= "13:15" && time < "15:00") || (time >= "17:00" && time < "18:45")) {
+      if ((time >= "11:15" && time < "12:00") || (time >= "14:15" && time < "15:00") || (time >= "18:00" && time < "18:45")) {
         if ($('#header').find($('#flash-header')).length == 0) {
           $('#header').css("height", "200px")
           $('#header').append(`
@@ -128,7 +129,7 @@
     }).fail(function () {
       console.log('fail')
     });
-    // alert('hi')
+
   });
 </script>
 
