--- a/intearctive-mode-template/pages/cw_template1.html
+++ b/intearctive-mode-template/pages/cw_template1.html
@@ -30,7 +30,8 @@
     </div>
     <div class="template1-content-panel position-relative ">
       <div id="home-select-video-panel" class="template1-video-panel">
-        <video width="100%" height="100%" autoplay muted>
+        <iframe src="../media/silence.mp3" type="audio/mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+        <video width="100%" height="100%" autoplay>
           <source src="" type="video/mp4">
           <!-- <source src="movie.ogg" type="video/ogg"> -->
           Your browser does not support the video tag.
