test cw remove fix width height

--- a/intearctive-mode-template/pages/cw_product_details.html
+++ b/intearctive-mode-template/pages/cw_product_details.html
@@ -14,7 +14,8 @@
     <script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 
-<body style="width: 1080px; height: 1920px;">
+<!-- <body style="width: 1080px; height: 1920px;"> -->
+<body>
     <!-- Header -->
     <!-- <header class="site-header w-100 header-vb plain"> -->
     <div class="top-panel-custom2 d-flex justify-content-left align-items-center position-relative" id="header">
