--- a/intearctive-mode-template/pages/cw_template1.html
+++ b/intearctive-mode-template/pages/cw_template1.html
@@ -13,7 +13,8 @@
   <script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 
-<body style="width: 1080px; height: 1920px;">
+<!-- <body style="width: 1080px; height: 1920px;"> -->
+<body>
   <main class="main-content w-100 interactive-mode template1-body-custom main-sizing">
     <div class="top-panel-custom2 d-flex justify-content-left align-items-center position-relative" id="header">
       <img id="cw-header-logo" src="../images/DECAAR_LOGO PLACEMENT_WHITE 2.png">
