reverse width height prev version

--- a/intearctive-mode-template/pages/cw_template2.html
+++ b/intearctive-mode-template/pages/cw_template2.html
@@ -14,8 +14,7 @@
     <script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 
-<!-- <body style="width: 1080px; height: 1920px;"> -->
-    <body>
+<body style="width: 1080px; height: 1920px;">
     <!-- Header -->
     <!-- <header class="site-header w-100 header-vb plain" id="header"> -->
     <div class="top-panel-custom2 d-flex justify-content-left align-items-center position-relative" id="header">
