--- a/intearctive-mode-template/pages/cw_product_details.html
+++ b/intearctive-mode-template/pages/cw_product_details.html
@@ -14,8 +14,8 @@
     <script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 
-<!-- <body style="width: 1080px; height: 1920px;"> -->
-<body>
+<body style="width: 1080px; height: 1920px;">
+
     <!-- Header -->
     <!-- <header class="site-header w-100 header-vb plain"> -->
     <div class="top-panel-custom2 d-flex justify-content-left align-items-center position-relative" id="header">
@@ -75,11 +75,11 @@
                             <h6 id="skuid">รหัสสินค้า 8857126925012</h6>
                             <h2 id="productname">Bewell เบาะรองหลัง Ergo-Cushion
                                 Serie Back EC-01 (Cooling Cotton)</h2>
-                            <label id="tagline" style="line-height:22px; margin-top:1rem;">Bewel</label>
+                            <label id="tagline" style="line-height:22px; margin-top:1rem; font-weight: 400;">Bewel</label>
                             <p id="price"><span>ราคา</span>1,490 บาท <a href="#"
                                     id="delivery_tag">สินค้าจัดส่งที่บ้าน</a></p>
                             <ul style="list-style:none; margin-left:0px; padding-left: 0px; margin-top:0px">
-                                <li id="desc">สายรัดกับเก้าอี้ให้ปรับระดับได้ <br>เพื่อปรับให้เข้า</li>
+                                <li id="desc" style="font-weight:400;">สายรัดกับเก้าอี้ให้ปรับระดับได้ <br>เพื่อปรับให้เข้า</li>
                             </ul>
                             <div class="d-flex puchase-options two">
                                 <div class="  puchase-option2 options qrcode" type="button">
