--- a/intearctive-mode-template/pages/test.html
+++ b/intearctive-mode-template/pages/test.html
@@ -81,7 +81,7 @@
                                 alt="">
                         </div>
                         <div class="qr-box-footer shadow">
-                            <p> <img src="../images/ig-logo.png" alt=""> Instragram </p> <img src="../images/qrcode.png"
+                            <p> <img src="../images/ig-logo.png" alt=""> instagram </p> <img src="../images/qrcode.png"
                                 alt="">
                         </div>
                         <div class="qr-box-footer shadow">
