--- a/intearctive-mode-template/pages/cw_template1.html
+++ b/intearctive-mode-template/pages/cw_template1.html
@@ -54,7 +54,7 @@
               <p> <img src="../images/fb-logo.png" alt=""> Facebook </p> <img src="../images/qr-fb.png" alt="">
             </div>
             <div class="qr-box-footer shadow">
-              <p> <img src="../images/ig-logo.png" alt=""> Instragram </p> <img src="../images/qr-ig.png" alt="">
+              <p> <img src="../images/ig-logo.png" alt=""> Instagram </p> <img src="../images/qr-ig.png" alt="">
             </div>
             <div class="qr-box-footer shadow">
               <p> <img src="../images/yt-logo.png" alt=""> Youtube </p> <img src="../images/qr-yt.png" alt="">
