home select use flash sale 45 percen

--- a/intearctive-mode-template/pages/home_select_product_list.html
+++ b/intearctive-mode-template/pages/home_select_product_list.html
@@ -160,7 +160,7 @@
                     $('#header').append(`
                 <div id="flash-header" style="position: absolute; width: 100%; height: 200px; background-color:black;">
                     <video width="100%" height="100%" autoplay muted loop>
-                        <source src="../media/L2_C&W/Flash sale Banner/35_Flash Sale_200.mp4" type="video/mp4">
+                        <source src="../media/L2_Home Selected/Flash sale banner/45Min Flash Sale_200.mp4" type="video/mp4">
                     </video>
                 </div>`
                     )
