fix bug 3 min inactive

--- a/intearctive-mode-template/pages/home_select_product_details.html
+++ b/intearctive-mode-template/pages/home_select_product_details.html
@@ -141,6 +141,10 @@
             }
         }, 1000)
 
+        $("html").click(function( event ) {     
+            startTime = performance.now()
+        });
+
         // Flash Sale Banner
         setInterval(function () {
             var today = new Date();
