--- a/intearctive-mode-template/pages/roof_template2.html
+++ b/intearctive-mode-template/pages/roof_template2.html
@@ -88,7 +88,8 @@
             <div id="video-panel" class="template2-content-panel">
                 <div class="content-sectiion-temp-2">
                     <div class="fist-content">
-                        <video autoplay muted loop playsinline preload="metadata" id="video-banner">
+                        <iframe src="../media/silence.mp3" type="audio/mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+                        <video autoplay id="video-banner">
                             <source src="" type="video/mp4">
                         </video>
                     </div>
