--- a/intearctive-mode-template/pages/roof_product_details.html
+++ b/intearctive-mode-template/pages/roof_product_details.html
@@ -47,7 +47,7 @@
                 <div class="img-gallery">
                     <div class="row">
                         <div class="col-6 product-image-corosel ">
-                            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-interval="false">
                                 <div class="carousel-indicators justify-content-start" id="slide-button"
                                     style="width: 45rem; transform: scale(1.35); margin-left: 7.5rem;">
                                     <!-- carousel button by js -->
