--- a/intearctive-mode-template/pages/cw_template1.html
+++ b/intearctive-mode-template/pages/cw_template1.html
@@ -8,6 +8,7 @@
   <title>Template 1</title>
   <link rel="stylesheet" href="../css/main.min.css" />
   <link rel="stylesheet" href="../css/custom/global_custom.css" />
+  <link rel="stylesheet" href="../css/custom/cw_scale_down.css"/>
   <link rel="stylesheet" href="../css/custom/template1.css" />
   <link rel="stylesheet" href="../css/custom/cw_header.css" />
   <script src="../js/jquery-3.6.0.min.js"></script>
