--- a/intearctive-mode-template/pages/home_select_product_list.html
+++ b/intearctive-mode-template/pages/home_select_product_list.html
@@ -8,6 +8,7 @@
     <title>Bootstrap 5</title>
     <link rel="stylesheet" href="../css/main.min.css" />
     <link rel="stylesheet" href="../css/custom/global_custom.css"/>
+    <link rel="stylesheet" href="../css/custom/hs_scale_down.css"/>
     <link rel="stylesheet" href="../css/custom/roof_productlist.css" />
     <link rel="stylesheet" href="../css/custom/template2.css" />
     <link rel="stylesheet" href="../css/custom/content_template2.css" />
