add shopping bag icon and back icon image

--- a/intearctive-mode-template/pages/cw_product_details.html
+++ b/intearctive-mode-template/pages/cw_product_details.html
@@ -53,7 +53,7 @@
         <!-- Content -->
         <div class="content-panel ">
             <button class="btn btn-back" onclick="history.back()">
-                <i class="icon-back"></i>
+                <i><img src="../images/arrow_back.png"></i>
             </button>
             <!-- Inner Content -->
             <div class="inner-content inner-content-custom">
