--- a/intearctive-mode-template/pages/home_select_product_details.html
+++ b/intearctive-mode-template/pages/home_select_product_details.html
@@ -40,7 +40,7 @@
         <!-- Content -->
         <div class="content-panel ">
             <button class="btn btn-back" onclick="history.back()">
-                <i class="icon-back"></i>
+                <i><img src="../images/arrow_back.png"></i>
             </button>
             <!--Inner Content -->
             <div class="inner-content inner-content-custom">
@@ -74,7 +74,7 @@
                                     <h6>ชำระเงิน<br>
                                         ที่แคชเชียร์
                                     </h6>
-                                    <i class="icon-bag"></i>
+                                    <i><img src="../images/shopping_bag.png"></i>
                                 </div>
                                 <div class="separator">
                                     <span>หรือ</span>
