add image close modal

--- a/intearctive-mode-template/pages/cw_template2.html
+++ b/intearctive-mode-template/pages/cw_template2.html
@@ -83,7 +83,7 @@
                                             <img id="modal-qrcode" src="../images/qr-banner-modal.png" />
                                         </div>
                                     </div>
-                                    <button class="btn btn-rednew" data-bs-dismiss="modal"> <i class="icon-close"></i>
+                                    <button class="btn btn-rednew" data-bs-dismiss="modal"> <img src="../images/close.png" style="margin-right: 15px;">
                                         <span>ปิดหน้าต่าง</span></button>
                                 </div>
 
