--- a/intearctive-mode-template/pages/cw_product_list.html
+++ b/intearctive-mode-template/pages/cw_product_list.html
@@ -80,20 +80,15 @@
         <!-- Modal -->
         <div class="modal fade" id="fullScreenModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="staticBackdropLabel" aria-hidden="true" style="background-color: rgba(0, 0, 0, 0.8);">
-            <div class="modal-dialog modal-dialog-centered modal-lg">
-                <div class="modal-content" style="height: 300px;">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="staticBackdropLabel" style="font-size: 22px;">สัมผัสประสบการณ์ไหม่
-                            ในโลกเสมือน</h5>
-                        <!-- <button type="button" class="btn-close force-full-screen" data-bs-dismiss="modal" aria-label="Close"></button> -->
-                    </div>
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
                     <div class="modal-body" style="font-size: 22px;">
-                        น้อง XP ขอขอบคุณที่รับชม Virtual Reality นะคะ
+                        <img src="../images/thanks_vr_bg.png" style="width: 100%; height: 100%;">
                     </div>
-                    <div class="modal-footer">
+                    <div class="modal-footer" style="display: flex; justify-content: center;">
                         <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
                         <button type="button" id="full-screen-button"
-                            class="btn btn-rednew force-full-screen">ปิด</button>
+                            class="btn btn-rednew force-full-screen" style="width: 250px;">แตะเพื่อดูรายการสินค้า</button>
                     </div>
                 </div>
             </div>
