--- a/intearctive-mode-template/pages/cw_template2.html
+++ b/intearctive-mode-template/pages/cw_template2.html
@@ -107,7 +107,7 @@
                         <div class="modal-footer" style="display: flex; justify-content: center;">
                             <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
                             <button type="button" id="full-screen-button" class="btn btn-rednew force-full-screen"
-                                style="width: 250px;">แตะเพื่อกลับสู่ & And Wall</button>
+                                style="width: 250px;">แตะเพื่อกลับสู่ Ceiling & Wall</button>
                         </div>
                     </div>
                 </div>
