--- a/intearctive-mode-template/pages/cw_product_list.html
+++ b/intearctive-mode-template/pages/cw_product_list.html
@@ -82,7 +82,7 @@
             aria-labelledby="staticBackdropLabel" aria-hidden="true" style="background-color: rgba(0, 0, 0, 0.8);">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
-                    <div class="modal-body" style="font-size: 22px;">
+                    <div style="font-size: 22px;">
                         <img src="../images/thanks_vr_bg.png" style="width: 100%; height: 100%;">
                     </div>
                     <div class="modal-footer" style="display: flex; justify-content: center;">
