--- a/intearctive-mode-template/pages/cw_template2.html
+++ b/intearctive-mode-template/pages/cw_template2.html
@@ -101,10 +101,10 @@
                 style="background-color: rgba(0, 0, 0, 0.8);">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
-                        <div class="modal-body" style="font-size: 22px;">
+                        <div style="font-size: 22px;">
                             <img src="../images/thanks_vr_bg.png" style="width: 100%; height: 100%;">
                         </div>
-                        <div style="display: flex; justify-content: center;">
+                        <div class="modal-footer" style="display: flex; justify-content: center;">
                             <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
                             <button type="button" id="full-screen-button" class="btn btn-rednew force-full-screen"
                                 style="width: 250px;">แตะเพื่อกลับสู่ Ceiling & Wall</button>
