--- a/intearctive-mode-template/pages/home_select_template2.html
+++ b/intearctive-mode-template/pages/home_select_template2.html
@@ -63,12 +63,12 @@
                             </div>
                             <div class="col-2 data-right">
                                 <div class="d-flex puchase-options ">
-                                    <div class="  puchase-option2 options qrcode" style="padding-top: 0px;"
+                                    <!-- <div class="  puchase-option2 options qrcode" style="padding-top: 0px;"
                                         type="button">
                                         <h6>แสกนรับสิทธิ์
                                         </h6>
                                         <img id="modal-qrcode" src="../images/qr-banner-modal.png" />
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <button class="btn btn-rednew" data-bs-dismiss="modal"><img src="../images/close.png" style="margin-right: 15px;">
                                     <span>ปิดหน้าต่าง</span></button>
